--- a/Ex2/web_app/package.json
+++ b/Ex2/web_app/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "csv-parse": "^5.0.4",
+    "csv-parser": "^3.0.0",
     "debug": "~2.6.9",
     "ejs": "^3.1.7",
     "express": "~4.16.1",
