--- a/.github/workflows/main_expressexperiment.yml
+++ b/.github/workflows/main_expressexperiment.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./Ex2/web_app
 
   deploy:
     runs-on: ubuntu-latest
